# covid

./: .coveragerc  .flake8  .gitignore  404.html  Makefile  Pipfile  README.md  cli-2.py  cli.py  example.py  index.html  install.sh  main.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tests.py
.circleci/: config.yml
cli/: index.html
covid/: __init__.py  cli.py  config.py
covid/john_hopkins/: __init__.py  covid.py  models.py
covid/tests/: test_worldometer.py
covid/worldometers/: __init__.py  covid.py  models.py
docs/: cli.md  example.md  examples.md  index.md  install.md  john_hopkins.md  worldometers.md
examples/: index.html
install/: index.html
john_hopkins/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/cli/: index.html
site/example/: index.html
site/examples/: index.html
site/install/: index.html
site/john_hopkins/: index.html
site/search/: search_index.json
site/worldometers/: index.html
tests/: test_john_hopkings.py  test_sources.py  test_worldometer.py
worldometers/: index.html
